force-app/main/default/objects/MarketInsight__c/MarketInsight__c.object-meta.xml
<CustomObject>
    <label>Market Insight</label>
    <nameField>
        <label>Market Insight Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Market Insight</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>