force-app/main/default/objects/MarketInsight__c/fields/AveragePrice__c.field-meta.xml
<CustomField>
    <fullName>AveragePrice__c</fullName>
    <label>Average Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>