force-app/main/default/objects/MarketInsight__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Market Insight (Customer)</relationshipLabel>
    <relationshipName>Market_Insight1</relationshipName>
    <type>Lookup</type>
</CustomField>