force-app/main/default/objects/MarketInsight__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Market Insight</relationshipLabel>
    <relationshipName>Market_Insight</relationshipName>
    <type>Lookup</type>
</CustomField>