force-app/main/default/objects/MarketInsight__c/fields/Research__c.field-meta.xml
<CustomField>
    <fullName>Research__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Research</label>
    <referenceTo>Research__c</referenceTo>
    <relationshipLabel>Market Insight</relationshipLabel>
    <relationshipName>Market_Insight</relationshipName>
    <type>Lookup</type>
</CustomField>