force-app/main/default/objects/MarketInsight__c/fields/Sales__c.field-meta.xml
<CustomField>
    <fullName>Sales__c</fullName>
    <inlineHelpText>Enter the brand&apos;s total sales for the day</inlineHelpText>
    <label>Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>