force-app/main/default/objects/MarketInsight__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Market Insight</relationshipLabel>
    <relationshipName>Market_Insight</relationshipName>
    <type>Lookup</type>
</CustomField>